dist/1.0/bin/sample/retrieveUnpackaged/objects/Workflow_Rule__c.object
<CustomObject>
    <description>Configurable workflow rules for Request and Request Quotation responsible for automatic Status and Stage changes</description>
    <fields>
        <fullName>Condition_Stage__c</fullName>
        <label>Condition Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Status__c</fullName>
        <label>Condition Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Related_Stage__c</fullName>
        <label>New Related Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Related_Status__c</fullName>
        <label>New Related Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Stage__c</fullName>
        <label>New Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Quotation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_1__c</fullName>
        <label>Value 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_2__c</fullName>
        <label>Value 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Workflow Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Sequence__c</columns>
        <columns>Condition__c</columns>
        <columns>New_Stage__c</columns>
        <columns>New_Status__c</columns>
        <columns>New_Related_Stage__c</columns>
        <columns>New_Related_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WR{000000000}</displayFormat>
        <label>Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>